<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F2F2F"
    tools:context="com.example.sumit.jabwechat.ProfileActivity">


   <ImageView
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:scaleType="centerCrop"
       android:id="@+id/user_profile_image"
       android:layout_alignParentTop="true"
       android:src="@drawable/default_avatar"/>

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displaynameHint"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/user_profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/default_status"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/send_friend_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/sendFriendrequest"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
    <Button
        android:id="@+id/decline_friend_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/declineFriendrequest"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:id="@+id/user_profile_friends_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/totalFriend"
        android:layout_above="@+id/send_friend_request_btn"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
