<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.sumit.jabwechat.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/default_avatar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/profile_image"/>

    <TextView
        android:id="@+id/default_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displaynameHint"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/default_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/default_name"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/default_status"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:text="@string/changeimage"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/status_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_change_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/image_change_btn"
        android:layout_marginBottom="30dp"
        android:text="@string/changesatus"
        android:background="@android:color/white"
        android:paddingRight="16dp"
        android:paddingLeft="14dp"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>
