<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.sumit.jabwechat.StartActivity">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="80dp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newaccount"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="304dp"
        android:layout_marginBottom="12dp"
        android:paddingRight="28dp"
        android:paddingLeft="28dp"
        android:textStyle="bold"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_above="@+id/start_login_btn"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_login_btn"
        android:text="@string/already"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/start_reg_btn"
        android:layout_alignStart="@+id/start_reg_btn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"

        android:text="@string/welcome_msg"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        />

</RelativeLayout>
